--- a/index.html
+++ b/index.html
@@ -57,40 +57,45 @@
         </div>
       </section>
 
-      <section>
-        <ul class="list">
-          <li>
-            <h2 class="link-text">Внимание к деталям</h2>
-            <p class="text">
-              Идейные соображения,а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h2 class="link-text">Пунктуальность</h2>
-            <p class="text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h2 class="link-text">Планирование</h2>
-            <p class="text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h2 class="link-text">Современные технологии</h2>
-            <p class="text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
-        <!--Компания-->
-        <h2 class="section">Чем мы занимаемся</h2>
-        <div>
+      <section class="box">
+        <div class="div">
+          <ul class="list">
+            <li>
+              <h2 class="link-text">Внимание к деталям</h2>
+              <p class="text">
+                Идейные соображения,а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li>
+              <h2 class="link-text">Пунктуальность</h2>
+              <p class="text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <h2 class="link-text">Планирование</h2>
+              <p class="text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <h2 class="link-text">Современные технологии</h2>
+              <p class="text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--Компания-->
+
+      <section class="box">
+        <div class="div">
+          <h2 class="section">Чем мы занимаемся</h2>
           <ul class="list">
             <li>
               <img src="./img/img.png" width="250" alt="Image" />
@@ -106,34 +111,36 @@
       </section>
 
       <section class="pink">
-        <h3 class="section">Наша команда</h3>
+        <div class="div">
+          <h3 class="section">Наша команда</h3>
 
-        <ul class="list">
-          <li>
-            <img
-              src="./img/Demyanenko.jpg"
-              width="270"
-              alt="Игорь Демьяненко"
-            />
-            <h4 class="text-name">Игорь Демьяненко</h4>
-            <p class="dev">Product designer</p>
-          </li>
-          <li>
-            <img src="./img/Repina.jpg" width="270" alt="Ольга Репина" />
-            <h4 class="text-name">Ольга Репина</h4>
-            <p class="dev">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./img/Tarasoff.jpg" width="270" alt="Николай Тарасов" />
-            <h4 class="text-name">Николай Тарасов</h4>
-            <p class="dev">Marketing</p>
-          </li>
-          <li>
-            <img src="./img/Ermakof.jpg" width="270" alt="Михаил Ермаков" />
-            <h4 class="text-name">Михаил Ермаков</h4>
-            <p class="dev">UI Designer</p>
-          </li>
-        </ul>
+          <ul class="list">
+            <li>
+              <img
+                src="./img/Demyanenko.jpg"
+                width="270"
+                alt="Игорь Демьяненко"
+              />
+              <h4 class="text-name">Игорь Демьяненко</h4>
+              <p class="dev">Product designer</p>
+            </li>
+            <li>
+              <img src="./img/Repina.jpg" width="270" alt="Ольга Репина" />
+              <h4 class="text-name">Ольга Репина</h4>
+              <p class="dev">Frontend Developer</p>
+            </li>
+            <li>
+              <img src="./img/Tarasoff.jpg" width="270" alt="Николай Тарасов" />
+              <h4 class="text-name">Николай Тарасов</h4>
+              <p class="dev">Marketing</p>
+            </li>
+            <li>
+              <img src="./img/Ermakof.jpg" width="270" alt="Михаил Ермаков" />
+              <h4 class="text-name">Михаил Ермаков</h4>
+              <p class="dev">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
