--- a/portfolio.html
+++ b/portfolio.html
@@ -57,56 +57,59 @@
           <li><button type="button" class="button-port">Маркетинг</button></li>
         </ul>
       </div>
-      <ul>
-        <li>
-          <img src="./img/Technokryak.jpg" alt="Технокрякh4" />
-          <h4 class="title">Технокряк</h4>
-          <p class="paragraf">Веб-сайт</p>
-        </li>
-        <li>
-          <img
-            src="./img/NewOrlean.jpg"
-            alt=" Постер New Orlean vs Golden Star "
-          />
-          <h4 class="title">Постер New Orlean vs Golden Star</h4>
-          <p class="paragraf">Дизайн</p>
-        </li>
-        <li>
-          <img src="./img/Seafood.jpg" alt="Ресторан Seafood" />
-          <h4 class="title">Ресторан Seafood</h4>
-          <p class="paragraf">Приложение</p>
-        </li>
-        <li>
-          <img src="./img/Prime.jpg" alt="Проект Prime" />
-          <h4 class="title">Проект Prime</h4>
-          <p class="paragraf">Маркетинг</p>
-        </li>
-        <li>
-          <img src="./img/Boxes.jpg" alt="Проект Boxes" />
-          <h4 class="title">Проект Boxes</h4>
-          <p class="paragraf">Приложение</p>
-        </li>
-        <li>
-          <img src="./img/Inspiration.jpg" alt="Inspiration has no Borders" />
-          <h4 class="title">Inspiration has no Borders</h4>
-          <p class="paragraf">Веб-сайт</p>
-        </li>
-        <li>
-          <img src="./img/LimitedEdition.jpg" alt="Издание Limited Edition" />
-          <h4 class="title">Издание Limited Edition</h4>
-          <p class="paragraf">Дизайн</p>
-        </li>
-        <li>
-          <img src="./img/Lab.jpg" alt="Lab" />
-          <h4 class="title">Проект Lab</h4>
-          <p class="paragraf">Маркетинг</p>
-        </li>
-        <li>
-          <img src=".//img/GrowingBusiness.jpg" alt="Growing Business" />
-          <h4 class="title">Growing Business</h4>
-          <p class="paragraf">Приложение</p>
-        </li>
-      </ul>
+      <!-- ul+li обернул в контайнер -->
+      <container>
+        <ul>
+          <li>
+            <img src="./img/Technokryak.jpg" alt="Технокрякh4" />
+            <h4 class="title">Технокряк</h4>
+            <p class="paragraf">Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./img/NewOrlean.jpg"
+              alt=" Постер New Orlean vs Golden Star "
+            />
+            <h4 class="title">Постер New Orlean vs Golden Star</h4>
+            <p class="paragraf">Дизайн</p>
+          </li>
+          <li>
+            <img src="./img/Seafood.jpg" alt="Ресторан Seafood" />
+            <h4 class="title">Ресторан Seafood</h4>
+            <p class="paragraf">Приложение</p>
+          </li>
+          <li>
+            <img src="./img/Prime.jpg" alt="Проект Prime" />
+            <h4 class="title">Проект Prime</h4>
+            <p class="paragraf">Маркетинг</p>
+          </li>
+          <li>
+            <img src="./img/Boxes.jpg" alt="Проект Boxes" />
+            <h4 class="title">Проект Boxes</h4>
+            <p class="paragraf">Приложение</p>
+          </li>
+          <li>
+            <img src="./img/Inspiration.jpg" alt="Inspiration has no Borders" />
+            <h4 class="title">Inspiration has no Borders</h4>
+            <p class="paragraf">Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./img/LimitedEdition.jpg" alt="Издание Limited Edition" />
+            <h4 class="title">Издание Limited Edition</h4>
+            <p class="paragraf">Дизайн</p>
+          </li>
+          <li>
+            <img src="./img/Lab.jpg" alt="Lab" />
+            <h4 class="title">Проект Lab</h4>
+            <p class="paragraf">Маркетинг</p>
+          </li>
+          <li>
+            <img src=".//img/GrowingBusiness.jpg" alt="Growing Business" />
+            <h4 class="title">Growing Business</h4>
+            <p class="paragraf">Приложение</p>
+          </li>
+        </ul>
+      </container>
     </main>
     <!-- Footer -->
     <footer class="footer">
