--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Шапка, навигация, контакты, лого -->
     <header>
       <!-- навигация -->
-      <div class="container">
+      <div class="container main-nav">
         <nav class="nav">
           <a href="./index.html" class="logo link">
             <span class="logoblue">Web</span>Studio</a
@@ -32,23 +32,25 @@
               <a class="link" href="">Контакты</a>
             </li>
           </ul>
+
+          <!-- тут ставить селектор class="logo" -->
+
+          <address class="style-text">
+            <ul class="list">
+              <li class="page">
+                <a class="link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="page">
+                <a class="link" href="tel:+38-096-111-11-11"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
         </nav>
       </div>
-
-      <!-- тут ставить селектор class="logo" -->
-
-      <address class="style-text">
-        <ul class="list">
-          <li class="page">
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="page">
-            <a class="link" href="tel:+38-096-111-11-11">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
     </header>
 
     <!--Container hero-->
@@ -101,13 +103,13 @@
           <h2 class="section">Чем мы занимаемся</h2>
           <ul class="list">
             <li>
-              <img src="./img/img.png" width="250" alt="Image" />
+              <img src="./img/img.png" width="370" height="294" alt="Image" />
             </li>
             <li>
-              <img src="./img/img1.png" width="250" alt="image1" />
+              <img src="./img/img1.png" width="370" height="294" alt="image1" />
             </li>
             <li>
-              <img src="./img/img2.png" width="250" alt="image2" />
+              <img src="./img/img2.png" width="370" height="294" alt="image2" />
             </li>
           </ul>
         </div>
