--- a/portfolio.html
+++ b/portfolio.html
@@ -13,37 +13,39 @@
   <body>
     <header>
       <!-- навигация -->
-      <nav class="nav">
-        <a href="./index.html" class="logo link">
-          <span class="logoblue">Web</span>Studio</a
-        >
-        <ul class="site-nav">
-          <!-- в ul -class site nav -->
-          <li>
-            <a class="link" href="./index.html">Студия</a>
-          </li>
-          <li>
-            <a class="link-current" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li>
-            <a class="link" href="">Контакты</a>
-          </li>
-        </ul>
+      <div class="container main-nav">
+        <nav class="nav">
+          <a href="./index.html" class="logo link">
+            <span class="logoblue">Web</span>Studio</a
+          >
+          <ul class="site-nav">
+            <!-- в ul -class site nav -->
+            <li>
+              <a class="link" href="./index.html">Студия</a>
+            </li>
+            <li>
+              <a class="link-current" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li>
+              <a class="link" href="">Контакты</a>
+            </li>
+          </ul>
 
-        <!-- тут ставить селектор class="logo" -->
-      </nav>
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link" href="tel:+38-096-111-11-11">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+          <!-- тут ставить селектор class="logo" -->
+        </nav>
+        <address class="style-text">
+          <ul class="list">
+            <li>
+              <a class="link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link" href="tel:+38-096-111-11-11">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!-- Main -->
