--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
           <h2 class="section">Чем мы занимаемся</h2>
           <ul class="list">
             <li>
-              <img src="./img/img.png" width="370" height="294" alt="Image" />
+              <img src="./img/img.png" width="370" alt="Image" />
             </li>
             <li>
-              <img src="./img/img1.png" width="370" height="294" alt="image1" />
+              <img src="./img/img1.png" width="370" alt="image1" />
             </li>
             <li>
-              <img src="./img/img2.png" width="370" height="294" alt="image2" />
+              <img src="./img/img2.png" width="370" alt="image2" />
             </li>
           </ul>
         </div>
