--- a/portfolio.html
+++ b/portfolio.html
@@ -20,97 +20,120 @@
           >
           <ul class="site-nav">
             <!-- в ul -class site nav -->
-            <li>
-              <a class="link" href="./index.html">Студия</a>
+            <li class="page">
+              <a class="link link-current" href="./index.html">Студия</a>
             </li>
-            <li>
-              <a class="link-current" href="./portfolio.html">Портфолио</a>
+            <li class="page">
+              <a class="link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li>
+            <li class="page">
               <a class="link" href="">Контакты</a>
             </li>
           </ul>
 
           <!-- тут ставить селектор class="logo" -->
+
+          <address class="style-text">
+            <ul class="list">
+              <li class="page">
+                <a class="link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="page">
+                <a class="link" href="tel:+38-096-111-11-11"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
         </nav>
-        <address class="style-text">
-          <ul class="list">
-            <li>
-              <a class="link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="link" href="tel:+38-096-111-11-11">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </address>
       </div>
     </header>
 
     <!-- Main -->
-    <main class="backgr-port">
-      <div>
-        <ul>
-          <li><button type="button" class="button-port">Все</button></li>
-          <li><button type="button" class="button-port">Веб-сайты</button></li>
-          <li><button type="button" class="button-port">Приложения</button></li>
-          <li><button type="button" class="button-port">Дизайн</button></li>
-          <li><button type="button" class="button-port">Маркетинг</button></li>
+    <main>
+      <div class="container">
+        <ul class="flex-box">
+          <li class="item-btn">
+            <button type="button" class="button-port">Все</button>
+          </li>
+          <li class="item-btn">
+            <button type="button" class="button-port">Веб-сайты</button>
+          </li>
+          <li class="item-btn">
+            <button type="button" class="button-port">Приложения</button>
+          </li>
+          <li class="item-btn">
+            <button type="button" class="button-port">Дизайн</button>
+          </li>
+          <li class="item-btn">
+            <button type="button" class="button-port">Маркетинг</button>
+          </li>
         </ul>
       </div>
       <!-- ul+li обернул в контайнер -->
-      <container>
-        <ul>
-          <li>
-            <img src="./img/Technokryak.jpg" alt="Технокрякh4" />
-            <h4 class="title">Технокряк</h4>
-            <p class="paragraf">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./img/NewOrlean.jpg"
-              alt=" Постер New Orlean vs Golden Star "
-            />
-            <h4 class="title">Постер New Orlean vs Golden Star</h4>
-            <p class="paragraf">Дизайн</p>
-          </li>
-          <li>
-            <img src="./img/Seafood.jpg" alt="Ресторан Seafood" />
-            <h4 class="title">Ресторан Seafood</h4>
-            <p class="paragraf">Приложение</p>
-          </li>
-          <li>
-            <img src="./img/Prime.jpg" alt="Проект Prime" />
-            <h4 class="title">Проект Prime</h4>
-            <p class="paragraf">Маркетинг</p>
-          </li>
-          <li>
-            <img src="./img/Boxes.jpg" alt="Проект Boxes" />
-            <h4 class="title">Проект Boxes</h4>
-            <p class="paragraf">Приложение</p>
-          </li>
-          <li>
-            <img src="./img/Inspiration.jpg" alt="Inspiration has no Borders" />
-            <h4 class="title">Inspiration has no Borders</h4>
-            <p class="paragraf">Веб-сайт</p>
-          </li>
-          <li>
-            <img src="./img/LimitedEdition.jpg" alt="Издание Limited Edition" />
-            <h4 class="title">Издание Limited Edition</h4>
-            <p class="paragraf">Дизайн</p>
-          </li>
-          <li>
-            <img src="./img/Lab.jpg" alt="Lab" />
-            <h4 class="title">Проект Lab</h4>
-            <p class="paragraf">Маркетинг</p>
-          </li>
-          <li>
-            <img src=".//img/GrowingBusiness.jpg" alt="Growing Business" />
-            <h4 class="title">Growing Business</h4>
-            <p class="paragraf">Приложение</p>
-          </li>
-        </ul>
+      <container class="">
+        <section>
+          <div class="container">
+            <ul class="flex-container">
+              <li>
+                <img src="./img/Technokryak.jpg" alt="Технокрякh4" />
+                <h4 class="title">Технокряк</h4>
+                <p class="paragraf">Веб-сайт</p>
+              </li>
+              <li>
+                <img
+                  src="./img/NewOrlean.jpg"
+                  alt=" Постер New Orlean vs Golden Star "
+                />
+                <h4 class="title">Постер New Orlean vs Golden Star</h4>
+                <p class="paragraf">Дизайн</p>
+              </li>
+              <li>
+                <img src="./img/Seafood.jpg" alt="Ресторан Seafood" />
+                <h4 class="title">Ресторан Seafood</h4>
+                <p class="paragraf">Приложение</p>
+              </li>
+              <li>
+                <img src="./img/Prime.jpg" alt="Проект Prime" />
+                <h4 class="title">Проект Prime</h4>
+                <p class="paragraf">Маркетинг</p>
+              </li>
+              <li>
+                <img src="./img/Boxes.jpg" alt="Проект Boxes" />
+                <h4 class="title">Проект Boxes</h4>
+                <p class="paragraf">Приложение</p>
+              </li>
+              <li>
+                <img
+                  src="./img/Inspiration.jpg"
+                  alt="Inspiration has no Borders"
+                />
+                <h4 class="title">Inspiration has no Borders</h4>
+                <p class="paragraf">Веб-сайт</p>
+              </li>
+              <li>
+                <img
+                  src="./img/LimitedEdition.jpg"
+                  alt="Издание Limited Edition"
+                />
+                <h4 class="title">Издание Limited Edition</h4>
+                <p class="paragraf">Дизайн</p>
+              </li>
+              <li>
+                <img src="./img/Lab.jpg" alt="Lab" />
+                <h4 class="title">Проект Lab</h4>
+                <p class="paragraf">Маркетинг</p>
+              </li>
+              <li>
+                <img src=".//img/GrowingBusiness.jpg" alt="Growing Business" />
+                <h4 class="title">Growing Business</h4>
+                <p class="paragraf">Приложение</p>
+              </li>
+            </ul>
+          </div>
+        </section>
       </container>
     </main>
     <!-- Footer -->
