--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
         <div class="container">
           <h2 class="section">Чем мы занимаемся</h2>
           <ul class="list">
-            <li>
+            <li class="item-box">
               <img src="./img/img.png" width="370" alt="Image" />
             </li>
-            <li>
+            <li class="item-box">
               <img src="./img/img1.png" width="370" alt="image1" />
             </li>
-            <li>
+            <li class="item-box">
               <img src="./img/img2.png" width="370" alt="image2" />
             </li>
           </ul>
@@ -120,7 +120,7 @@
           <h3 class="section">Наша команда</h3>
 
           <ul class="list">
-            <li>
+            <li class="item">
               <img
                 src="./img/Demyanenko.jpg"
                 width="270"
@@ -129,17 +129,17 @@
               <h4 class="text-name">Игорь Демьяненко</h4>
               <p class="dev">Product designer</p>
             </li>
-            <li>
+            <li class="item">
               <img src="./img/Repina.jpg" width="270" alt="Ольга Репина" />
               <h4 class="text-name">Ольга Репина</h4>
               <p class="dev">Frontend Developer</p>
             </li>
-            <li>
+            <li class="item">
               <img src="./img/Tarasoff.jpg" width="270" alt="Николай Тарасов" />
               <h4 class="text-name">Николай Тарасов</h4>
               <p class="dev">Marketing</p>
             </li>
-            <li>
+            <li class="item">
               <img src="./img/Ermakof.jpg" width="270" alt="Михаил Ермаков" />
               <h4 class="text-name">Михаил Ермаков</h4>
               <p class="dev">UI Designer</p>
