--- a/index.html
+++ b/index.html
@@ -150,18 +150,22 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo link">
-          <span class="logoblue">Web</span><span class="studio">Studio</span></a
-        >
         <address class="white">
-          г. Киев, пр-т Леси Украинки, 26
-          <ul class="list">
-            <li>
+          <ul>
+            <li class="info">
+              <a href="./index.html" class="logo link">
+                <span class="logoblue">Web</span
+                ><span class="studio">Studio</span></a
+              >
+            </li>
+            <li class="info">г. Киев, пр-т Леси Украинки, 26</li>
+
+            <li class="info">
               <a class="link-var" href="mailto:info@example.com"
                 >info@example.com</a
               >
             </li>
-            <li>
+            <li class="info">
               <a class="link-var" href="tel:+380991111111">+38 099 111 11 11</a>
             </li>
           </ul>
