--- a/portfolio.html
+++ b/portfolio.html
@@ -138,22 +138,28 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo link">
-        <span class="logoblue">Web</span><span class="studio">Studio</span></a
-      >
-      <address class="white style-text">
-        г. Киев, пр-т Леси Украинки, 26
-        <ul class="list">
-          <li>
-            <a class="link-var" href="mailto:info@example.com"
-              >info@example.com</a
-            >
-          </li>
-          <li>
-            <a class="link-var" href="tel:+380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <address class="white">
+          <ul>
+            <li class="info">
+              <a href="./index.html" class="logo link">
+                <span class="logoblue">Web</span
+                ><span class="studio">Studio</span></a
+              >
+            </li>
+            <li class="info">г. Киев, пр-т Леси Украинки, 26</li>
+
+            <li class="info">
+              <a class="link-var" href="mailto:info@example.com"
+                >info@example.com</a
+              >
+            </li>
+            <li class="info">
+              <a class="link-var" href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
