--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
     <main>
       <section class="hero">
         <div class="container">
-          <h1>Эффективные решения для вашего бизнеса</h1>
+          <h1>
+            Эффективные решения<br />
+            для вашего бизнеса
+          </h1>
           <button type="button" class="button_text">Заказать услугу</button>
         </div>
       </section>
