--- a/index.html
+++ b/index.html
@@ -68,28 +68,28 @@
       <section class="box">
         <div class="container">
           <ul class="list">
-            <li>
+            <li class="item-working">
               <h2 class="link-text">Внимание к деталям</h2>
               <p class="text">
                 Идейные соображения,а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="item-working">
               <h2 class="link-text">Пунктуальность</h2>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="item-working">
               <h2 class="link-text">Планирование</h2>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="item-working">
               <h2 class="link-text">Современные технологии</h2>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -122,7 +122,7 @@
         <div class="container">
           <h3 class="section">Наша команда</h3>
 
-          <ul class="list">
+          <ul class="list1">
             <li class="item">
               <img
                 src="./img/Demyanenko.jpg"
