--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- Шапка, навигация, контакты, лого -->
-    <header>
+    <header class="page-header">
       <!-- навигация -->
       <div class="container main-nav">
         <nav class="nav">
@@ -57,7 +57,7 @@
     <main>
       <section class="hero">
         <div class="container">
-          <h1>
+          <h1 class="hero-title">
             Эффективные решения<br />
             для вашего бизнеса
           </h1>
