--- a/portfolio.html
+++ b/portfolio.html
@@ -77,12 +77,12 @@
         <section>
           <div class="container">
             <ul class="flex-container">
-              <li class="item-boxp">
+              <li class="item-box">
                 <img src="./img/Technokryak.jpg" alt="Технокрякh4" />
                 <h4 class="title">Технокряк</h4>
                 <p class="paragraf">Веб-сайт</p>
               </li>
-              <li class="item-boxp">
+              <li class="item-box">
                 <img
                   src="./img/NewOrlean.jpg"
                   alt=" Постер New Orlean vs Golden Star "
@@ -90,22 +90,22 @@
                 <h4 class="title">Постер New Orlean vs Golden Star</h4>
                 <p class="paragraf">Дизайн</p>
               </li>
-              <li class="item-boxp">
+              <li class="item-box">
                 <img src="./img/Seafood.jpg" alt="Ресторан Seafood" />
                 <h4 class="title">Ресторан Seafood</h4>
                 <p class="paragraf">Приложение</p>
               </li>
-              <li class="item-boxp">
+              <li class="item-box">
                 <img src="./img/Prime.jpg" alt="Проект Prime" />
                 <h4 class="title">Проект Prime</h4>
                 <p class="paragraf">Маркетинг</p>
               </li>
-              <li class="item-boxp">
+              <li class="item-box">
                 <img src="./img/Boxes.jpg" alt="Проект Boxes" />
                 <h4 class="title">Проект Boxes</h4>
                 <p class="paragraf">Приложение</p>
               </li>
-              <li class="item-boxp">
+              <li class="item-box">
                 <img
                   src="./img/Inspiration.jpg"
                   alt="Inspiration has no Borders"
@@ -113,7 +113,7 @@
                 <h4 class="title">Inspiration has no Borders</h4>
                 <p class="paragraf">Веб-сайт</p>
               </li>
-              <li class="item-boxp">
+              <li class="item-box">
                 <img
                   src="./img/LimitedEdition.jpg"
                   alt="Издание Limited Edition"
@@ -121,12 +121,12 @@
                 <h4 class="title">Издание Limited Edition</h4>
                 <p class="paragraf">Дизайн</p>
               </li>
-              <li class="item-boxp">
+              <li class="item-box">
                 <img src="./img/Lab.jpg" alt="Lab" />
                 <h4 class="title">Проект Lab</h4>
                 <p class="paragraf">Маркетинг</p>
               </li>
-              <li class="item-boxp">
+              <li class="item-box">
                 <img src=".//img/GrowingBusiness.jpg" alt="Growing Business" />
                 <h4 class="title">Growing Business</h4>
                 <p class="paragraf">Приложение</p>
