--- a/portfolio.html
+++ b/portfolio.html
@@ -107,7 +107,7 @@
               <a class="link" href="">
                 <img
                   class="img-portfolio"
-                  src="./images/portfolio-3.jpg"
+                  src="./img/Seafood.jpg"
                   alt="Лого ресторана"
                   width="370"
                 />
@@ -121,7 +121,7 @@
               <a class="link" href="">
                 <img
                   class="img-portfolio"
-                  src="./images/portfolio-4.jpg"
+                  src="./img/Prime.jpg"
                   alt="Наушники"
                   width="370"
                 />
@@ -135,7 +135,7 @@
               <a class="link" href="">
                 <img
                   class="img-portfolio"
-                  src="./images/portfolio-5.jpg"
+                  src="./img/Boxes.jpg"
                   alt="Коробки"
                   width="370"
                 />
@@ -149,7 +149,7 @@
               <a class="link" href="">
                 <img
                   class="img-portfolio"
-                  src="./images/portfolio-6.jpg"
+                  src="./img/Inspiration.jpg"
                   alt="Монитор"
                   width="370"
                 />
@@ -163,7 +163,7 @@
               <a class="link" href="">
                 <img
                   class="img-portfolio"
-                  src="./images/portfolio-7.jpg"
+                  src="./img/LimitedEdition.jpg"
                   alt="Книга"
                   width="370"
                 />
@@ -177,7 +177,7 @@
               <a class="link" href="">
                 <img
                   class="img-portfolio"
-                  src="./images/portfolio-8.jpg"
+                  src="./img/Lab.jpg"
                   alt="Брелок"
                   width="370"
                 />
@@ -191,7 +191,7 @@
               <a class="link" href="">
                 <img
                   class="img-portfolio"
-                  src="./images/portfolio-9.jpg"
+                  src="./img/GrowingBusiness.jpg"
                   alt="Ноутбук"
                   width="370"
                 />
